# intl-lens

./: .gitignore  Cargo.toml  PRD.md  README.md  ROADMAP.md  action.yml  package.json
.github/workflows/: ci.yml  release.yml
crates/i18n-lsp/: Cargo.toml
crates/i18n-lsp/src/: backend.rs  config.rs  document.rs  main.rs
crates/i18n-lsp/src/i18n/: key_finder.rs  mod.rs  parser.rs  store.rs
crates/intl-lens/: Cargo.toml
crates/intl-lens-extension/: Cargo.toml  extension.toml
crates/intl-lens-extension/src/: lib.rs
crates/intl-lens/src/: audit.rs  backend.rs  cli.rs  cli_app.rs  config.rs  document.rs  legacy_mcp.rs  lib.rs  main.rs  mcp.rs  scanner.rs
crates/intl-lens/src/i18n/: key_finder.rs  mod.rs  namespace.rs  parser.rs  store.rs
crates/intl-lens/tests/: cli_ci_test.rs  mcp_integration_test.rs
crates/zed-i18n-extension/: Cargo.toml  extension.toml
crates/zed-i18n-extension/src/: lib.rs
examples/: gitlab-ci.yml
scripts/: github-action.sh
