[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.3"
edition = "2021"
license = "MIT"
authors = ["Trong Nguyen"]
repository = "https://github.com/nguyenphutrong/intl-lens"

[workspace.dependencies]
tower-lsp = "0.20"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utils
anyhow = "1"
dashmap = "6"
regex = "1"
globset = "0.4"
walkdir = "2"

# Zed extension
zed_extension_api = "0.7"
