[package]
name = "intl-lens"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "i18n intelligence layer with LSP, CLI, and MCP interfaces"

[lib]
name = "intl_lens"
path = "src/lib.rs"

[[bin]]
name = "intl-lens"
path = "src/main.rs"

[[bin]]
name = "intl-lens-cli"
path = "src/cli.rs"

[[bin]]
name = "intl-lens-mcp"
path = "src/mcp.rs"

[dependencies]
tower-lsp.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
dashmap.workspace = true
regex.workspace = true
globset.workspace = true
walkdir.workspace = true
clap = { version = "4", features = ["derive"] }
colored = "2"
indicatif = "0.17"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
